--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "date-fns": "^4.1.0",
-    "next": "^14.2.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "recharts": "^3.5.1",
+    "date-fns": "^3.6.0",
+    "next": "14.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "recharts": "^2.12.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.7",
-    "tailwindcss": "^4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
